--- a/Site_de_test/Pages/html/page_1.html
+++ b/Site_de_test/Pages/html/page_1.html
@@ -9,6 +9,6 @@
 			<h1>C'est la seconde page</h1>
 			<p>page 2 :)</p>
 			<p>En gros cette ligne est un test</p>
-			<p><a href="../../Main.html">Page 1 --)</a></p>
+			<p><a href="../../index.html">Page 1 --)</a></p>
 		</body>
 	</html>
